# aria-audit

./: .gitignore  DATA_STATEMENT.md  MODEL_CARD.md  README.md  pyproject.toml  reproduce.sh
aria_audit/: __init__.py  cli.py  core.py  drift.py  gpu_manager.py  orchestrator.py
aria_audit/axes/: __init__.py  attribution.py  calibration.py  consistency.py  equity.py  faithfulness.py
aria_audit/baselines/: granite_guardian.py  llamaguard.py  ragas_wrapper.py
aria_audit/bench/: vram_gate.py
aria_audit/storage/: schema.sql  sqlite_logger.py
eval/: compare_baselines.py  run_eval.py
eval/suites/: README.md  bbq_subset.jsonl  bold_subset.jsonl  counterfactual_pairs.jsonl  cpfe_custom.jsonl
paper/: SUBMISSION_CHECKLIST.md  arxiv_preprint.tex  refs.bib
paper/figs/: gen_fig_ablation.py  gen_fig_architecture.py  gen_fig_coverage_radar.py  gen_fig_drift.py  gen_fig_equity_distributions.py  gen_fig_latency.py
tests/: test_core.py
